--- a/templates/views/post.twig
+++ b/templates/views/post.twig
@@ -36,6 +36,7 @@
 								</div>
 							{% endif %}
 							{{ data.post.content.full | raw }}
+							{{ data.post.content.paraInfo | raw }}
 						</div>
 					{% endif %}
 				</article>
