Ajout de la page Algorithmes

--- a/templates/views/algorithmes.twig
+++ b/templates/views/algorithmes.twig
@@ -2,12 +2,13 @@
 
 {% block intro %}
 	<div class="container">
-		<h1>Contact Us</h1>
+		<h1>Algorithmes</h1>
 	</div>
 {% endblock %}
 
 {% block content %}
-	<div class="container">
+	
+{#	<div class="container">
 		{% if enquirySubmitted %}
 			<h3>Thanks for getting in touch.</h3>
 		{% else %}
@@ -79,5 +80,5 @@
 				</div>
 			</div>
 		{% endif %}
-	</div>
+	</div>#}
 {% endblock %}
