Ajout de la page Algorithmes

--- a/templates/views/index.twig
+++ b/templates/views/index.twig
@@ -1,7 +1,7 @@
 {% extends "../layouts/default.twig" %}
 
 {% block content %}
-	<div class="container">
+{#	<div class="container">
 		<div class="jumbotron">
 			<img src="/images/logo.svg" width="160">
 			<h1>Welcome</h1>
@@ -30,5 +30,5 @@
 				<a href="https://twitter.com/keystonejs" target="_blank">follow @keystonejs</a> on twitter for updates.
 			</p>
 		</div>
-	</div>
+	</div>#}
 {% endblock %}
