--- a/templates/views/index.twig
+++ b/templates/views/index.twig
@@ -1,6 +1,19 @@
 {% extends "../layouts/default.twig" %}
 
 {% block content %}
+	<div class="contaier" style="width: 100%; height: 100px; background-color: #1D1D1D;">
+		<div class="row" style="width: 100%; height: 100%;">
+			<div class="col-4" style="height: 100%; background-color: #74a44a;">
+
+			</div>
+			<div class="col-8" style="height: 100%; background-color: #751d1a;">
+
+			</div>
+		</div>
+	</div>
+	
+	
+	
 {#	<div class="container">
 		<div class="jumbotron">
 			<img src="/images/logo.svg" width="160">
