--- a/public/styles/site.styl
+++ b/public/styles/site.styl
@@ -4,6 +4,7 @@
 // Bootstrap can be removed entirely by deleting this line.
 
 @import "bootstrap"
+@import "custom"
 
 // The easiest way to customise Bootstrap variables while
 // being able to easily override the source files with new
