--- a/templates/views/algorithmes.twig
+++ b/templates/views/algorithmes.twig
@@ -1,84 +1,119 @@
-{% extends "../layouts/default.twig" %}
+ {% extends "../layouts/default.twig" %}
 
 {% block intro %}
 	<div class="container">
 		<h1>Algorithmes !!!!</h1>
 	</div>
 {% endblock %}
-
+ 
+ {% block css %}
+	 <link rel="stylesheet" href="bower_components/treant-js/Treant.css" type="text/css"/>
+ {% endblock %}
+ 
 {% block content %}
-	
-{#	<div class="container">
-		{% if enquirySubmitted %}
-			<h3>Thanks for getting in touch.</h3>
-		{% else %}
-			<div class="row">
-				<div class="col-sm-8 col-md-6">
-					<form method="post">
-						<input type="hidden" name="action" value="contact">
-						{% set className = "" %}
-						{% if validationErrors.name %}
-							{% set className = "has-error" %}
-						{% endif %}
-						<div class="form-group {{ className }}">
-							<label>
-								<span>Name</span>
-								<input type="text" name="name.full" value="{{ formData['name.full'] | default('') }}" class="form-control">
-							</label>
-						</div>
-						{% set className = "" %}
-						{% if validationErrors.email %}
-							{% set className = "has-error" %}
-						{% endif %}
-						<div class="form-group {{ className }}">
-							<label>
-								<span>Email</span>
-								<input type="email" name="email" value="{{ formData.email | default('') }}" class="form-control">
-							</label>
-						</div>
-						<div class="form-group">
-							<label>
-								<span>Phone</span>
-								<input type="text" name="phone" value="{{ formData.phone | default('') }}" placeholder="(optional)" class="form-control">
-							</label>
-						</div>
-						{% set className = "" %}
-						{% if validationErrors.enquiryType %}
-							{% set className = "has-error" %}
-						{% endif %}
-						<div class="form-group {{ className }}">
-							<label>
-								<span>What are you contacting us about?</span>
-								<select name="enquiryType" class="form-control">
-									<option value="">(select one)</option>
-									{% for type in enquiryTypes %}
-										{% set selected = "" %}
-										{% if formData.enquiryType == type.value %}
-											{% set selected = " selected" %}
-										{% endif %}
-										<option value="{{ type.value }}"{{ selected }}>{{ type.label }}</option>
-									{% endfor %}
-								</select>
-							</label>
-						</div>
-						{% set className = "" %}
-						{% if validationErrors.message %}
-							{% set className = "has-error" %}
-						{% endif %}
-						<div class="form-group {{ className }}">
-							<label>
-								<span>Message</span>
-								<textarea name="message" placeholder="Leave us a message..." rows="4" class="form-control">
-									{{ formData.message }}
-								</textarea>
-							</label>
-						</div>
-						<div class="form-actions">
-							<button type="submit" class="btn btn-primary">Send</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		{% endif %}
-	</div>#}
+	<div class="row">
+		<div id="tree-simple" style="width:auto; height: auto; margin: auto;"></div>	
+	</div>
 {% endblock %}
+ 
+ {% block js %}
+	{#<script src="bower_components/d3/d3.min.js"></script>#}
+	<script src="bower_components/treant-js/vendor/raphael.js"></script>
+	<script src="bower_components/treant-js/Treant.js"></script>
+	<script type="module" src="js/script/algorithmes.js"></script>
+	<script>
+		/*			data = $.getJSON( "/data/algorithmes.json");
+					alert(data.text);*/
+		simple_chart_config = {
+			chart: {
+				container: "#tree-simple"
+			},
+
+			nodeStructure: {
+				"text": {
+					"name": "Machine learning"
+				},
+				"children": [
+					{
+						"text": {
+							"name": "Apprentissage supervisé"
+						},
+						"children":[
+							{
+								"text": {
+									"name": "Classification"
+								},
+								"children": [
+									{
+										"text": {
+											"name":"Naive Bayes"
+										},
+
+									},
+									{
+										"text": {
+											"name":"Régression logistique"
+										},
+
+									},
+									{
+										"text": {
+											"name":"Arbre de décision"
+										},
+
+									},
+									{
+										"text": {
+											"name":"SVM"
+										},
+
+									},
+									{
+										"text": {
+											"name":"K-NN"
+										},
+
+									},
+									{
+										"text": {
+											"name":"Naive Bayes"
+										},
+
+									},
+								]
+							},
+							{
+								"text": {
+									"name" : "Régression"
+								},
+								"children": [
+									{
+										"text":{
+											"name": "Régression polynomiale"
+										}
+									},
+									{
+										"text":{
+											"name": "Régression linéaire"
+										}
+									},
+									{
+										"text":{
+											"name": "Ridge/LASSO régression"
+										}
+									},
+								]
+							},
+						]
+					},
+					{
+						"text": {
+							"name": "Apprentissage non-supervisé"
+						}
+					}
+				]
+			}
+		};
+		var chart = new Treant(simple_chart_config);
+	</script>
+ {% endblock %}
