--- a/templates/views/index.twig
+++ b/templates/views/index.twig
@@ -1,47 +1,86 @@
 {% extends "../layouts/default.twig" %}
+{% block css %}
+	<link rel="stylesheet" href="styles/custom/index.css">
+{% endblock %}
+
+{% block intro %}
+	<div class="container">
+		<h1 class="h1 text-center">Qui suis-je ?</h1>
+		<hr size="10">
+	</div>
+{% endblock %}
 
 {% block content %}
-	<div class="contaier" style="width: 100%; height: 100px; background-color: #1D1D1D;">
-		<div class="row" style="width: 100%; height: 100%;">
-			<div class="col-4" style="height: 100%; background-color: #74a44a;">
-
-			</div>
-			<div class="col-8" style="height: 100%; background-color: #751d1a;">
-
-			</div>
+	<div class="container">
+		<div class="row">
+			<img class="img-circle img-responsive" src="helium/img/team/team-08.jpg" alt="Mohamed Bouchiba"
+				 style="width: auto; margin: auto; float: left;">
+			<p class="fa-paragraph">
+				Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
+				impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un
+				imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de
+				texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique,
+				sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de
+				feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des
+				applications de mise en page de texte, comme Aldus PageMaker. Le Lorem Ipsum est simplement du faux
+				texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte
+				standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des
+				morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq
+				siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
+				Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du
+				Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme
+				Aldus PageMaker.
+				Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
+				impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un
+				imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de
+				texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique,
+				sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de
+				feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des
+				applications de mise en page de texte, comme Aldus PageMaker. Le Lorem Ipsum est simplement du faux
+				texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte
+				standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des
+				morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq
+				siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
+				Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du
+				Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme
+				Aldus PageMaker.</p>
 		</div>
-	</div>
-	
-	
-	
-{#	<div class="container">
-		<div class="jumbotron">
-			<img src="/images/logo.svg" width="160">
-			<h1>Welcome</h1>
-			<p>This is your new <a href="http://keystonejs.com" target="_blank">KeystoneJS</a> website.</p>
-			<p>
-				It includes the latest versions of
-				<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>
-				and <a href="http://www.jquery.com/" target="_blank">jQuery</a>.
-			</p>
-			<p>Visit the <a href="http://keystonejs.com/guide" target="_blank">Getting Started</a> guide to learn how to customise it.</p>
-			<hr>
-			{% if (user is defined) and (user.canAccessKeystone) %}
-				<p>
-					<a href="/keystone" class="btn btn-lg btn-primary">Open the Admin UI</a>
-				</p>
-			{% else %}
-				<p>We have created a default Admin user for you with the email <strong>mohamed.bouchiba1993@gmail.com</strong> and the password <strong>admin</strong>.</p>
-				<p>
-					<a href="/keystone/signin" style="margin-right: 10px" class="btn btn-lg btn-primary">Sign in</a>
-					to use the Admin UI.
-				</p>
-			{% endif %}
-			<hr>
-			<p>
-				Remember to <a href="https://github.com/keystonejs/keystone" target="_blank">Star KeystoneJS on GitHub</a> and
-				<a href="https://twitter.com/keystonejs" target="_blank">follow @keystonejs</a> on twitter for updates.
-			</p>
-		</div>
-	</div>#}
+		<hr size="10">
+		{#<div class="single-testimonial-area">
+			<div class="container">
+				<div id="single-testimonial-item" class="owl-carousel owl-theme" style="opacity: 1; display: block;">
+
+					<div class="owl-wrapper-outer">
+						<div class="owl-wrapper"
+							 style="width: 6660px; left: 0px; display: block; transition: all 0ms ease 0s; transform: translate3d(0px, 0px, 0px);">
+							<div class="owl-item" style="width: 1110px;">
+								<div class="item">
+									<div class="row justify-content-md-center">
+										<div class="col-lg-8 col-md-12 col-xs-12">
+											<div class="testimonial-inner text-center">
+												<blockquote>
+													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam,
+													non ut molestiae rerum praesentium repellat debitis iure reiciendis,
+													eius culpa beatae commodi facere ad numquam. Quisquam dignissimos
+													similique sunt iure fugit, omnis vel cupiditate repellendus magni
+													nihil molestiae quam, delectus consequuntur blanditiis modi nostrum?
+												</blockquote>
+												<div class="testimonial-images">
+													<img class="img-circle text-center" src="helium/img/testimonial/img1.jpg"
+														 alt="">
+												</div>
+												<div class="testimonial-footer">
+													<i class="fa fa-user"></i> Arman
+													<a href="#"> UIdeck</a>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>#}
 {% endblock %}
