--- a/templates/layouts/default.twig
+++ b/templates/layouts/default.twig
@@ -36,7 +36,7 @@
 		{% block head %}{% endblock %}
 	</head>
 	<body>
-	<div id="header" class="container">
+	<div id="header" class="container-fluid">
 			<div role="navigation" class="navbar navbar-default">
 				<div class="container">
 					<div class="navbar-header">
