Titre Algo centré

--- a/templates/views/algorithmes.twig
+++ b/templates/views/algorithmes.twig
@@ -2,7 +2,8 @@
 
 {% block intro %}
 	<div class="container">
-		<h1>Algorithmes !!!!</h1>
+		<h1 class="h1 text-center">Algorithmes</h1>
+		<hr size="10">
 	</div>
 {% endblock %}
  
