Ajouts du portfolio

--- a/templates/views/index.twig
+++ b/templates/views/index.twig
@@ -45,7 +45,179 @@
 				Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme
 				Aldus PageMaker.</p>
 		</div>
-		<hr size="10">
+	</div>	
+	<section id="portfolio" class="section">
+		<div class="container">
+			<div class="sub-title">
+				<h1 class="h1 text-center">Mes projets personel</h1>
+			</div>
+			<div class="row">
+				<div class="col-12">
+
+					<div class="controls text-center wow fadeInUpQuick" data-wow-delay=".6s">
+						<a class="filter btn btn-common" data-filter="all">
+							Tous
+						</a>
+						<a class="filter btn btn-common" data-filter=".branding">
+							Développement Web
+						</a>
+						<a class="filter btn btn-common" data-filter=".marketing">
+							Développement Mobile
+						</a>
+						<a class="filter btn btn-common active" data-filter=".planning">
+							Objets Connectés
+						</a>
+						<a class="filter btn btn-common" data-filter=".research">
+							Data-Sciences 
+						</a>
+					</div>
+
+				</div>
+
+				<div id="portfolio" class="row wow fadeInUpQuick" data-wow-delay="0.8s">
+					<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing planning" data-bound="" style="display: inline-block;">
+						<div class="portfolio-item">
+							<div class="portfolio-img">
+								<img src="helium/img/portfolio/img1.jpg" alt="">
+							</div>
+							<div class="portfoli-content">
+								<div class="sup-desc-wrap">
+									<div class="sup-desc-inner">
+										<div class="sup-link">
+											<a class="left-link" href="#"><i class="fa fa-link"></i></a>
+											<a class="right-link" href="#"><i class="fa fa-heart"></i></a>
+										</div>
+										<div class="sup-meta-wrap">
+											<a class="sup-title" href="#">
+												<h4>TITLE HERE</h4>
+											</a>
+											<p class="sup-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente vel quisquam.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix branding planning" data-bound="" style="display: inline-block;">
+						<div class="portfolio-item">
+							<div class="portfolio-img">
+								<img src="helium/img/portfolio/img2.jpg" alt="">
+							</div>
+							<div class="portfoli-content">
+								<div class="sup-desc-wrap">
+									<div class="sup-desc-inner">
+										<div class="sup-link">
+											<a class="left-link" href="#"><i class="fa fa-link"></i></a>
+											<a class="right-link" href="#"><i class="fa fa-heart"></i></a>
+										</div>
+										<div class="sup-meta-wrap">
+											<a class="sup-title" href="#">
+												<h4>TITLE HERE</h4>
+											</a>
+											<p class="sup-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente vel quisquam.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix branding research" data-bound="">
+						<div class="portfolio-item">
+							<div class="portfolio-img">
+								<img src="helium/img/portfolio/img3.jpg" alt="">
+							</div>
+							<div class="portfoli-content">
+								<div class="sup-desc-wrap">
+									<div class="sup-desc-inner">
+										<div class="sup-link">
+											<a class="left-link" href="#"><i class="fa fa-link"></i></a>
+											<a class="right-link" href="#"><i class="fa fa-heart"></i></a>
+										</div>
+										<div class="sup-meta-wrap">
+											<a class="sup-title" href="#">
+												<h4>TITLE HERE</h4>
+											</a>
+											<p class="sup-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente vel quisquam.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing research" data-bound="">
+						<div class="portfolio-item">
+							<div class="portfolio-img">
+								<img src="helium/img/portfolio/img4.jpg" alt="">
+							</div>
+							<div class="portfoli-content">
+								<div class="sup-desc-wrap">
+									<div class="sup-desc-inner">
+										<div class="sup-link">
+											<a class="left-link" href="#"><i class="fa fa-link"></i></a>
+											<a class="right-link" href="#"><i class="fa fa-heart"></i></a>
+										</div>
+										<div class="sup-meta-wrap">
+											<a class="sup-title" href="#">
+												<h4>TITLE HERE</h4>
+											</a>
+											<p class="sup-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente vel quisquam.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing planning" data-bound="" style="display: inline-block;">
+						<div class="portfolio-item">
+							<div class="portfolio-img">
+								<img src="helium/img/portfolio/img5.jpg" alt="">
+							</div>
+							<div class="portfoli-content">
+								<div class="sup-desc-wrap">
+									<div class="sup-desc-inner">
+										<div class="sup-link">
+											<a class="left-link" href="#"><i class="fa fa-link"></i></a>
+											<a class="right-link" href="#"><i class="fa fa-heart"></i></a>
+										</div>
+										<div class="sup-meta-wrap">
+											<a class="sup-title" href="#">
+												<h4>TITLE HERE</h4>
+											</a>
+											<p class="sup-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente vel quisquam.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix planning research" data-bound="" style="display: inline-block;">
+						<div class="portfolio-item">
+							<div class="portfolio-img">
+								<img src="helium/img/portfolio/img6.jpg" alt="">
+							</div>
+							<div class="portfoli-content">
+								<div class="sup-desc-wrap">
+									<div class="sup-desc-inner">
+										<div class="sup-link">
+											<a class="left-link" href="#"><i class="fa fa-link"></i></a>
+											<a class="right-link" href="#"><i class="fa fa-heart"></i></a>
+										</div>
+										<div class="sup-meta-wrap">
+											<a class="sup-title" href="#">
+												<h4>TITLE HERE</h4>
+											</a>
+											<p class="sup-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente vel quisquam.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</section>
 		{#<div class="single-testimonial-area">
 			<div class="container">
 				<div id="single-testimonial-item" class="owl-carousel owl-theme" style="opacity: 1; display: block;">
@@ -83,4 +255,16 @@
 				</div>
 			</div>
 		</div>#}
+{% endblock %}
+
+
+{% block js %}
+<script>
+	$(document).ready(function() {
+		//MixitUp
+		$(function() {
+			$('#portfolio').mixItUp();
+		});
+	});
+</script>
 {% endblock %}
