--- a/templates/views/index.twig
+++ b/templates/views/index.twig
@@ -255,11 +255,59 @@
 				</div>
 			</div>
 		</div>#}
+	<div class="demo">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-offset-2 col-md-8 ">
+					<div id="testimonial-slider" class="owl-carousel">
+						<div class="testimonial">
+							<p class="description">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus molestie, justo nec convallis sollicitudin, sapien lorem dictum lacus, non consequat odio ipsum nec est. Sed mattis egestas elementum. Nulla facilisi. Quisque placerat risus ac nunc ornare tincidunt. Sed quis faucibus nunc. Pellentesque accumsan arcu mi, eget venenatis mauris.
+							</p>
+							<h3 class="title">williamson</h3>
+							<span class="post">Web Developer</span>
+						</div>
+
+						<div class="testimonial">
+							<p class="description">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus molestie, justo nec convallis sollicitudin, sapien lorem dictum lacus, non consequat odio ipsum nec est. Sed mattis egestas elementum. Nulla facilisi. Quisque placerat risus ac nunc ornare tincidunt. Sed quis faucibus nunc. Pellentesque accumsan arcu mi, eget venenatis mauris.
+							</p>
+							<h3 class="title">Kristina</h3>
+							<span class="post">Web Designer</span>
+						</div>
+
+						<div class="testimonial">
+							<p class="description">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus molestie, justo nec convallis sollicitudin, sapien lorem dictum lacus, non consequat odio ipsum nec est. Sed mattis egestas elementum. Nulla facilisi. Quisque placerat risus ac nunc ornare tincidunt. Sed quis faucibus nunc. Pellentesque accumsan arcu mi, eget venenatis mauris.
+							</p>
+							<h3 class="title">Miranda Joy</h3>
+							<span class="post">Web Developer</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
 
 
 {% block js %}
+	<script src="helium/js/jquery.mixitup.js"></script>
 <script>
+	$(document).ready(function(){
+		$("#testimonial-slider").owlCarousel({
+			items:1,
+			itemsDesktop:[1000,1],
+			itemsDesktopSmall:[979,1],
+			itemsTablet:[768,1],
+			pagination:true,
+			navigation:true,
+			navigationText:["",""],
+			slideSpeed:1000,
+			autoPlay:true
+		});
+	});
+	
 	$(document).ready(function() {
 		//MixitUp
 		$(function() {
